--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,7 @@
     "coding standard"
   ],
   "require": {
-    "php": "^7.0",
+    "php": "^5.6 | ^7.0",
     "friendsofphp/php-cs-fixer": "^2.0"
   }
 }
