--- a/composer.json
+++ b/composer.json
@@ -10,5 +10,8 @@
   "require": {
     "php": "^5.6 | ^7.0",
     "friendsofphp/php-cs-fixer": "^2.0"
-  }
+  },
+  "bin": [
+    "bin/cs-tool"
+  ]
 }
