--- a/composer.json
+++ b/composer.json
@@ -1,14 +1,38 @@
 {
-  "name": "facile-it/facile-coding-standard",
-  "description": "Facile.it coding standard",
-  "license": "MIT",
-  "keywords": [
-    "facile",
-    "facile.it",
-    "coding standard"
-  ],
-  "require": {
-    "php": "^7.0",
-    "friendsofphp/php-cs-fixer": "^2.0"
-  }
+    "name": "facile-it/facile-coding-standard",
+    "description": "Facile.it coding standard",
+    "type": "composer-plugin",
+    "extra": {
+        "class": "Facile\\CodingStandards\\Installer\\Plugin"
+    },
+    "license": "MIT",
+    "keywords": [
+        "facile",
+        "facile.it",
+        "coding standard"
+    ],
+    "scripts": {
+        "cs-check": "php-cs-fixer fix --dry-run --diff",
+        "cs-fix": "php-cs-fixer fix --diff"
+    },
+    "require": {
+        "php": "^7.0",
+        "friendsofphp/php-cs-fixer": "^2.3",
+        "composer-plugin-api": "^1.1"
+    },
+    "require-dev": {
+        "composer/composer": "^1.3.2",
+        "phpunit/phpunit": "^6.2",
+        "mikey179/vfsStream": "^1.6"
+    },
+    "autoload": {
+        "psr-4": {
+            "Facile\\CodingStandards\\": "src/"
+        }
+    },
+    "autoload-dev": {
+        "psr-4": {
+            "Facile\\CodingStandardsTest\\": "tests/"
+        }
+    }
 }
