--- a/.travis.yml
+++ b/.travis.yml
@@ -12,21 +12,32 @@ env:
 
 matrix:
   fast_finish: true
+  allow_failures:
+    - php: nightly
   include:
-    - php: 7.0
-      env:
-        - DEPS=lowest
-    - php: 7.0
-      env:
-        - EXECUTE_CS_CHECK=true
-        - EXECUTE_TEST_SCRUTINIZER=true
-        - DEPS=latest
     - php: 7.1
       env:
-        - DEPS=lowest
+      - DEPS=lowest
     - php: 7.1
       env:
-        - DEPS=latest
+      - EXECUTE_CS_CHECK=true
+      - EXECUTE_TEST_SCRUTINIZER=true
+      - DEPS=locked
+    - php: 7.1
+      env:
+      - DEPS=latest
+    - php: 7.2
+      env:
+      - DEPS=lowest
+    - php: 7.2
+      env:
+      - DEPS=latest
+    - php: nightly
+      env:
+      - DEPS=lowest
+    - php: nightly
+      env:
+      - DEPS=latest
 
 before_install:
   - composer self-update
@@ -39,8 +50,7 @@ install:
 script:
   - if [[ $EXECUTE_TEST_SCRUTINIZER == 'true' ]]; then ./vendor/bin/phpunit --coverage-clover coverage.clover ; fi
   - if [[ $EXECUTE_TEST_SCRUTINIZER != 'true' ]]; then ./vendor/bin/phpunit ; fi
-  - if [[ $EXECUTE_CS_CHECK == 'true' ]]; then ./vendor/bin/php-cs-fixer fix -v --diff --dry-run src/ ; fi
-  - if [[ $EXECUTE_CS_CHECK == 'true' ]]; then ./vendor/bin/php-cs-fixer fix -v --diff --dry-run tests/ ; fi
+  - if [[ $EXECUTE_CS_CHECK == 'true' ]]; then ./vendor/bin/php-cs-fixer fix -v --diff --dry-run; fi
 
 after_script:
   - if [[ $EXECUTE_TEST_SCRUTINIZER == 'true' ]]; then wget https://scrutinizer-ci.com/ocular.phar ; fi
