--- a/.php_cs.dist
+++ b/.php_cs.dist
@@ -6,19 +6,20 @@
  */
 $additionalRules = [];
 
-$rules = new Facile\CodingStandards\DefaultRules($additionalRules);
+$rulesProvider = new Facile\CodingStandards\Rules\CompositeRulesProvider([
+    new Facile\CodingStandards\Rules\DefaultRulesProvider(),
+    new Facile\CodingStandards\Rules\ArrayRulesProvider($additionalRules)
+]);
 
 $config = PhpCsFixer\Config::create();
-$config->setRules($rules->getRules());
+$config->setRules($rulesProvider->getRules());
 
 $config->setUsingCache(false);
 $config->setRiskyAllowed(false);
 
 $finder = PhpCsFixer\Finder::create();
-$finder->in([
-    'src/',
-    'tests/'
-]);
+$autoloadPathProvider = new Facile\CodingStandards\AutoloadPathProvider();
+$finder->in($autoloadPathProvider->getPaths());
 
 $config->setFinder($finder);
 
