--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
     },
     "require": {
         "php": "^7.1",
+        "ext-json": "*",
         "friendsofphp/php-cs-fixer": "^2.13.0",
         "composer-plugin-api": "^1.1"
     },
@@ -28,7 +29,8 @@
     "autoload": {
         "psr-4": {
             "Facile\\CodingStandards\\": "src/"
-        }
+        },
+        "files": ["src/Rules/ArrayRulesProvider.php"]
     },
     "autoload-dev": {
         "psr-4": {
