--- a/.php_cs.dist
+++ b/.php_cs.dist
@@ -8,7 +8,8 @@ $additionalRules = [];
 
 $rulesProvider = new Facile\CodingStandards\Rules\CompositeRulesProvider([
     new Facile\CodingStandards\Rules\DefaultRulesProvider(),
-    new Facile\CodingStandards\Rules\ArrayRulesProvider($additionalRules)
+    new Facile\CodingStandards\Rules\RiskyRulesProvider(),
+    new Facile\CodingStandards\Rules\ArrayRulesProvider($additionalRules),
 ]);
 
 $config = PhpCsFixer\Config::create();
