--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,8 @@
     "require-dev": {
         "composer/composer": "^1.3.2",
         "phpunit/phpunit": "^6.2",
-        "mikey179/vfsStream": "^1.6"
+        "mikey179/vfsStream": "^1.6",
+        "composer/semver": "^1.4"
     },
     "autoload": {
         "psr-4": {
