--- a/.php_cs.dist
+++ b/.php_cs.dist
@@ -1,16 +1,14 @@
 <?php
 
-/*
- * Additional rules or rules to override.
- * These rules will be added to default rules or will override them if the same key already exists.
- */
-$additionalRules = [];
-
-$rulesProvider = new Facile\CodingStandards\Rules\CompositeRulesProvider([
+$providers = [
     new Facile\CodingStandards\Rules\DefaultRulesProvider(),
-    new Facile\CodingStandards\Rules\RiskyRulesProvider(),
-    new Facile\CodingStandards\Rules\ArrayRulesProvider($additionalRules),
-]);
+];
+
+if (false !== getenv('DISABLE_RISKY_RULES')) {
+    $providers[] = new Facile\CodingStandards\Rules\RiskyRulesProvider();
+}
+
+$rulesProvider = new Facile\CodingStandards\Rules\CompositeRulesProvider($providers);
 
 $config = PhpCsFixer\Config::create();
 $config->setRules($rulesProvider->getRules());
