--- a/.php_cs.dist
+++ b/.php_cs.dist
@@ -4,7 +4,7 @@ $providers = [
     new Facile\CodingStandards\Rules\DefaultRulesProvider(),
 ];
 
-if (false !== getenv('DISABLE_RISKY_RULES')) {
+if (false === getenv('DISABLE_RISKY_RULES')) {
     $providers[] = new Facile\CodingStandards\Rules\RiskyRulesProvider();
 }
 
