--- a/.php_cs.dist
+++ b/.php_cs.dist
@@ -1,24 +1,24 @@
 <?php
 
-/*
- * Additional rules or rules to override.
- * These rules will be added to default rules or will override them if the same key already exists.
- */
-$additionalRules = [];
+$providers = [
+    new Facile\CodingStandards\Rules\DefaultRulesProvider(),
+];
 
-$rules = new Facile\CodingStandards\DefaultRules($additionalRules);
+if (false === getenv('DISABLE_RISKY_RULES')) {
+    $providers[] = new Facile\CodingStandards\Rules\RiskyRulesProvider();
+}
+
+$rulesProvider = new Facile\CodingStandards\Rules\CompositeRulesProvider($providers);
 
 $config = PhpCsFixer\Config::create();
-$config->setRules($rules->getRules());
+$config->setRules($rulesProvider->getRules());
 
 $config->setUsingCache(false);
 $config->setRiskyAllowed(false);
 
 $finder = PhpCsFixer\Finder::create();
-$finder->in([
-    'src/',
-    'tests/'
-]);
+$autoloadPathProvider = new Facile\CodingStandards\AutoloadPathProvider();
+$finder->in($autoloadPathProvider->getPaths());
 
 $config->setFinder($finder);
 
