--- a/composer.json
+++ b/composer.json
@@ -17,13 +17,15 @@
     },
     "require": {
         "php": "^7.1",
+        "ext-json": "*",
         "friendsofphp/php-cs-fixer": "^2.13.0",
         "composer-plugin-api": "^1.1"
     },
     "require-dev": {
         "composer/composer": "^1.3.2",
         "phpunit/phpunit": "^6.2",
-        "mikey179/vfsStream": "^1.6"
+        "mikey179/vfsStream": "^1.6",
+        "composer/semver": "^1.4"
     },
     "autoload": {
         "psr-4": {
