--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,9 @@
 /tests export-ignore
 .gitattributes export-ignore
 .gitignore export-ignore
+.php_cs.dist export-ignore
+.scrutinizer.yml export-ignore
+.travis.yml export-ignore
+.phpunit.xml.dist export-ignore
+CHANGELOG.md export-ignore
+composer.lock export-ignore
