--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,10 @@
         "composer/composer": "^1.3.2",
         "phpunit/phpunit": "^6.2",
         "mikey179/vfsStream": "^1.6",
-        "composer/semver": "^1.4"
+        "composer/semver": "^1.4",
+        "phpstan/phpstan": "^0.9",
+        "phpstan/phpstan-phpunit": "^0.9",
+        "jangregor/phpstan-prophecy": "^0.1"
     },
     "autoload": {
         "psr-4": {
