--- a/.travis.yml
+++ b/.travis.yml
@@ -22,6 +22,7 @@ matrix:
       env:
       - EXECUTE_CS_CHECK=true
       - EXECUTE_TEST_SCRUTINIZER=true
+      - EXECUTE_TEST_PHPSTAN=true
       - DEPS=locked
     - php: 7.1
       env:
@@ -50,6 +51,7 @@ install:
 script:
   - if [[ $EXECUTE_TEST_SCRUTINIZER == 'true' ]]; then ./vendor/bin/phpunit --coverage-clover coverage.clover ; fi
   - if [[ $EXECUTE_TEST_SCRUTINIZER != 'true' ]]; then ./vendor/bin/phpunit ; fi
+  - if [[ $EXECUTE_TEST_PHPSTAN != 'true' ]]; then ./vendor/bin/phpstan analyse -c phpstan.neon -l7 . ; fi
   - if [[ $EXECUTE_CS_CHECK == 'true' ]]; then DISABLE_RISKY_RULES=true ./vendor/bin/php-cs-fixer fix -v --diff --dry-run; fi
   - if [[ $EXECUTE_CS_CHECK == 'true' ]]; then ./vendor/bin/php-cs-fixer fix -v --diff --dry-run --allow-risky yes; fi
 
