--- a/.travis.yml
+++ b/.travis.yml
@@ -51,7 +51,7 @@ install:
 script:
   - if [[ $EXECUTE_TEST_SCRUTINIZER == 'true' ]]; then ./vendor/bin/phpunit --coverage-clover coverage.clover ; fi
   - if [[ $EXECUTE_TEST_SCRUTINIZER != 'true' ]]; then ./vendor/bin/phpunit ; fi
-  - if [[ $EXECUTE_TEST_PHPSTAN != 'true' ]]; then ./vendor/bin/phpstan analyse -c phpstan.neon -l7 . ; fi
+  - if [[ $EXECUTE_TEST_PHPSTAN != 'true' ]]; then ./vendor/bin/phpstan analyse --no-progress -c phpstan.neon -l7 . ; fi
   - if [[ $EXECUTE_CS_CHECK == 'true' ]]; then DISABLE_RISKY_RULES=true ./vendor/bin/php-cs-fixer fix -v --diff --dry-run; fi
   - if [[ $EXECUTE_CS_CHECK == 'true' ]]; then ./vendor/bin/php-cs-fixer fix -v --diff --dry-run --allow-risky yes; fi
 
