--- a/.gitattributes
+++ b/.gitattributes
@@ -1,6 +1,7 @@
 /tests export-ignore
 .gitattributes export-ignore
 .gitignore export-ignore
+.php_cs export-ignore
 .php_cs.dist export-ignore
 .scrutinizer.yml export-ignore
 .travis.yml export-ignore
