--- a/composer.json
+++ b/composer.json
@@ -29,9 +29,8 @@
         "composer/composer": "^1.3.2",
         "composer/semver": "^1.4 || ^2.0 || ^3.0",
         "mikey179/vfsstream": "^1.6",
-        "phpspec/prophecy-phpunit": "^1.0 || ^2.0",
         "phpstan/phpstan": "^0.12.32",
-        "phpunit/phpunit": "^8.5.8 || ^9.2"
+        "phpunit/phpunit": "^8.5.8"
     },
     "autoload": {
         "psr-4": {
