--- a/composer.json
+++ b/composer.json
@@ -22,11 +22,11 @@
         "php": "^7.2",
         "ext-json": "*",
         "composer-plugin-api": "^1.1 || ^2.0",
-        "friendsofphp/php-cs-fixer": "^2.16.4",
+        "friendsofphp/php-cs-fixer": "2.16.x-dev#ab2534b54c1cf0821ac0bc0043bc4ef613ee10cf as 2.16.5",
         "symfony/console": "^3.0 || ^4.0 || ^5.0"
     },
     "require-dev": {
-        "composer/composer": "^1.3.2",
+        "composer/composer": "^1.3.2 || ^2.0.0-alpha2",
         "composer/semver": "^1.4 || ^2.0 || ^3.0",
         "mikey179/vfsstream": "^1.6.8",
         "phpstan/phpstan": "^0.12.32",
