Psalm on CI and some fixes

--- a/.travis.yml
+++ b/.travis.yml
@@ -58,6 +58,7 @@ script:
   - if [[ $EXECUTE_TEST_SCRUTINIZER == 'true' ]]; then ./vendor/bin/phpunit --coverage-clover coverage.clover ; fi
   - if [[ $EXECUTE_TEST_SCRUTINIZER != 'true' ]]; then ./vendor/bin/phpunit ; fi
   - if [[ $EXECUTE_ANALYSE == 'true' ]]; then ./vendor/bin/phpstan analyse --no-progress; fi
+  - if [[ $EXECUTE_ANALYSE == 'true' ]]; then ./vendor/bin/psalm --long-progress; fi
   - if [[ $EXECUTE_CS_CHECK == 'true' ]]; then DISABLE_RISKY_RULES=true ./vendor/bin/php-cs-fixer fix -v --diff --dry-run; fi
   - if [[ $EXECUTE_CS_CHECK == 'true' ]]; then ./vendor/bin/php-cs-fixer fix -v --diff --dry-run --allow-risky yes; fi
 
