--- a/composer.json
+++ b/composer.json
@@ -29,6 +29,7 @@
         "composer/composer": "^1.3.2 || ^2.0",
         "composer/semver": "^1.4 || ^2.0 || ^3.0",
         "mikey179/vfsstream": "^1.6.8",
+        "phpspec/prophecy": "^1.10",
         "phpstan/phpstan": "^0.12.32",
         "phpunit/phpunit": "^8.5.8",
         "vimeo/psalm": "^4.1"
