--- a/composer.json
+++ b/composer.json
@@ -11,24 +11,27 @@
         "facile.it",
         "coding standard"
     ],
+    "config": {
+        "sort-packages": true
+    },
     "scripts": {
-        "cs-check": "php-cs-fixer fix --dry-run --diff",
-        "cs-fix": "php-cs-fixer fix --diff"
+        "cs-check": "php-cs-fixer fix --dry-run --diff --allow-risky yes",
+        "cs-fix": "php-cs-fixer fix --diff --allow-risky yes"
     },
     "require": {
-        "php": "^7.1",
+        "php": "^7.2",
         "ext-json": "*",
-        "friendsofphp/php-cs-fixer": "^2.13.0",
-        "composer-plugin-api": "^1.1"
+        "composer-plugin-api": "^1.1 || ^2.0",
+        "friendsofphp/php-cs-fixer": "^2.16.5",
+        "symfony/console": "^3.0 || ^4.0 || ^5.0"
     },
     "require-dev": {
-        "composer/composer": "^1.3.2",
-        "phpunit/phpunit": "^6.2",
-        "mikey179/vfsStream": "^1.6",
-        "composer/semver": "^1.4",
-        "phpstan/phpstan": "^0.9",
-        "phpstan/phpstan-phpunit": "^0.9",
-        "jangregor/phpstan-prophecy": "^0.1"
+        "composer/composer": "^1.3.2 || ^2.0",
+        "composer/semver": "^1.4 || ^2.0 || ^3.0",
+        "mikey179/vfsstream": "^1.6.8",
+        "phpspec/prophecy": "^1.10",
+        "phpunit/phpunit": "^8.5.8",
+        "vimeo/psalm": "^4.1"
     },
     "autoload": {
         "psr-4": {
