--- a/.gitattributes
+++ b/.gitattributes
@@ -1,10 +1,10 @@
 /tests export-ignore
+/.github export-ignore
 .gitattributes export-ignore
 .gitignore export-ignore
 .php_cs export-ignore
 .php_cs.dist export-ignore
 .scrutinizer.yml export-ignore
-.travis.yml export-ignore
 .phpunit.xml.dist export-ignore
 CHANGELOG.md export-ignore
 composer.lock export-ignore
