--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -28,10 +28,6 @@ jobs:
           - "latest"
         coverage:
           - "false"
-        include:
-          - deps: "latest"
-            php-version: "7.4"
-            coverage: "true"
 
     steps:
       - name: "Checkout"
@@ -61,14 +57,11 @@ jobs:
         run: "composer update --no-interaction --no-progress --no-suggest --prefer-dist --prefer-lowest"
         if: "${{ matrix.deps == 'lowest' }}"
 
-      - name: "Run PHPUnit"
-        run: "vendor/bin/phpunit"
-        if: "${{ matrix.coverage != 'true' }}"
-
       - name: "Run PHPUnit with coverage"
         run: "vendor/bin/phpunit --coverage-clover=coverage.xml"
-        if: "${{ matrix.coverage == 'true' }}"
 
       - name: "Upload coverage"
-        run: "wget https://scrutinizer-ci.com/ocular.phar && php ocular.phar code-coverage:upload --format=php-clover ./coverage.xml"
-        if: "${{ matrix.coverage == 'true' }}"
+        uses: codecov/codecov-action@v1
+        with:
+          file: './coverage.xml'
+          fail_ci_if_error: true
