--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -26,11 +26,11 @@ jobs:
           - "8.0"
         deps:
           - "lowest"
-          - "latest"
+          - "highest"
         coverage:
           - "false"
         include:
-          - deps: "latest"
+          - deps: "highest"
             php-version: "7.4"
             coverage: "true"
 
@@ -47,20 +47,11 @@ jobs:
           coverage: "pcov"
           ini-values: "zend.assertions=1"
 
-      - name: "Cache dependencies installed with composer"
-        uses: "actions/cache@v2"
+      - name: "Install dependencies"
+        uses: ramsey/composer-install@v1
         with:
-          path: "~/.composer/cache"
-          key: "php-${{ matrix.php-version }}-composer-locked-${{ hashFiles('composer.lock') }}"
-          restore-keys: "php-${{ matrix.php-version }}-composer-locked-"
-
-      - name: "Install dependencies with composer"
-        run: "composer install --no-interaction --no-progress --no-suggest --prefer-dist"
-        if: "${{ matrix.deps != 'lowest' }}"
-
-      - name: "Install lowest possible dependencies with composer"
-        run: "composer update --no-interaction --no-progress --no-suggest --prefer-dist --prefer-lowest"
-        if: "${{ matrix.deps == 'lowest' }}"
+          dependency-versions: ${{ matrix.deps }}
+          composer-options: --prefer-dist
 
       - name: "Run PHPUnit"
         run: "vendor/bin/phpunit"
@@ -74,5 +65,5 @@ jobs:
         uses: codecov/codecov-action@v1
         if: "${{ matrix.coverage == 'true' }}"
         with:
-            file: './coverage.xml'
-            fail_ci_if_error: true
+          file: './coverage.xml'
+          fail_ci_if_error: true
