--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -67,3 +67,6 @@ jobs:
         with:
           file: './coverage.xml'
           fail_ci_if_error: true
+
+      - name: "Run PHP-CS-Fixer (E2E test)"
+        run: "vendor/bin/php-cs-fixer --dry-run --diff"
