Do not run E2E test with --prefer-lowest to avoid tripping in upstream bugs

--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -70,3 +70,4 @@ jobs:
 
       - name: "Run PHP-CS-Fixer (E2E test)"
         run: "vendor/bin/php-cs-fixer fix --dry-run --diff"
+        if: "${{ matrix.deps != 'lowest' }}"
