--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,7 @@
         "php": "^7.2 || ^8.0",
         "ext-json": "*",
         "composer-plugin-api": "^1.1 || ^2.0",
-        "friendsofphp/php-cs-fixer": "^2.16.5||^3.0",
+        "friendsofphp/php-cs-fixer": "^2.16.5||^3.0-beta.2",
         "symfony/console": "^3.0 || ^4.0 || ^5.0"
     },
     "require-dev": {
