--- a/composer.json
+++ b/composer.json
@@ -22,8 +22,8 @@
         "php": "^7.2 || ^8.0",
         "ext-json": "*",
         "composer-plugin-api": "^1.1 || ^2.0",
-        "friendsofphp/php-cs-fixer": "^2.16.5||^3.0-beta.2",
-        "symfony/console": "^3.0 || ^4.0 || ^5.0"
+        "friendsofphp/php-cs-fixer": "^3.0-beta.2",
+        "symfony/console": "^3.4 || ^4.0 || ^5.0"
     },
     "require-dev": {
         "composer/composer": "^1.3.2 || ^2.0",
