--- a/.gitattributes
+++ b/.gitattributes
@@ -2,8 +2,8 @@
 /.github export-ignore
 .gitattributes export-ignore
 .gitignore export-ignore
-.php_cs export-ignore
-.php_cs.dist export-ignore
+.php-cs-fixer.php export-ignore
+.php-cs-fixer.dist.php export-ignore
 .scrutinizer.yml export-ignore
 .phpunit.xml.dist export-ignore
 CHANGELOG.md export-ignore
