--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 /vendor/
-/.php_cs
-/.php_cs.cache
+/.php-cs-fixer.php
+/.php-cs-fixer.php.cache
 /.phpunit.result.cache
 /phpunit.xml
 composer.lock
