--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -71,3 +71,22 @@ jobs:
       - name: "Run PHP-CS-Fixer (E2E test)"
         run: "vendor/bin/php-cs-fixer fix --dry-run --diff"
         if: "${{ matrix.deps != 'lowest' }}"
+  Psalm:
+    name: "Psalm"
+    runs-on: "ubuntu-20.04"
+    steps:
+      - name: "Checkout"
+        uses: "actions/checkout@v2"
+        with:
+          fetch-depth: 2
+
+      - name: "Install PHP"
+        uses: "shivammathur/setup-php@v2"
+        with:
+          php-version: "8.0"
+
+      - name: "Install dependencies"
+        uses: ramsey/composer-install@v1
+
+      - name: "Run Psalm"
+        run: "vendor/bin/psalm"
