--- a/composer.json
+++ b/composer.json
@@ -33,6 +33,7 @@
         "phpspec/prophecy": "^1.10",
         "phpspec/prophecy-phpunit": "^2.0",
         "phpunit/phpunit": "^9.5.28",
+        "psalm/plugin-phpunit": "^0.18.4",
         "vimeo/psalm": "^4.9"
     },
     "autoload": {
