--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,7 @@
         "ext-json": "*",
         "composer-plugin-api": "^1.1 || ^2.0",
         "friendsofphp/php-cs-fixer": "^3.4",
-        "symfony/console": "^4.0 || ^5.0 || ^6.0",
+        "symfony/console": "^4.0 || ^5.0 || ^6.0 || ^7.0",
         "symfony/polyfill-php80": "^1.0"
     },
     "require-dev": {
