Add Dependabot for PHP deps

--- a/.github/dependabot.yaml
+++ b/.github/dependabot.yaml
@@ -5,3 +5,7 @@ updates:
     schedule:
       interval: weekly
     open-pull-requests-limit: 103
+  - package-ecosystem: "composer"
+    directory: "/"
+    schedule:
+      interval: weekly
