--- a/composer.json
+++ b/composer.json
@@ -22,8 +22,8 @@
         "php": "^7.4 || ^8.0",
         "ext-json": "*",
         "composer-plugin-api": "^1.1 || ^2.0",
-        "friendsofphp/php-cs-fixer": "^3.4",
-        "symfony/console": "^4.0 || ^5.0 || ^6.0 || ^7.0",
+        "friendsofphp/php-cs-fixer": "^3.53",
+        "symfony/console": "^5.4 || ^6.0 || ^7.0",
         "symfony/polyfill-php80": "^1.0"
     },
     "require-dev": {
