--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -23,8 +23,10 @@ jobs:
           - "8.2"
           - "8.3"
         deps:
-          - "lowest"
           - "highest"
+        include:
+          - php-version: "7.4"
+            deps: "lowest"
 
     steps:
       - name: "Checkout"
