--- a/composer.json
+++ b/composer.json
@@ -21,13 +21,13 @@
     "require": {
         "php": "^7.4 || ^8.0",
         "ext-json": "*",
-        "composer-plugin-api": "^1.1 || ^2.0",
+        "composer-plugin-api": "^2.0",
         "friendsofphp/php-cs-fixer": "^3.4",
         "symfony/console": "^4.0 || ^5.0 || ^6.0 || ^7.0",
         "symfony/polyfill-php80": "^1.0"
     },
     "require-dev": {
-        "composer/composer": "^1.3.2 || ^2.0",
+        "composer/composer": "^2.0",
         "composer/semver": "^3.0",
         "mikey179/vfsstream": "^1.6.8",
         "phpspec/prophecy": "^1.10",
